@@ -155,7 +155,7 @@ GC_API int GC_CALL GC_general_register_disappearing_link(void * * link,
     struct disappearing_link * new_dl;
     DCL_LOCK_STATE;
     
-    if ((word)link & (ALIGNMENT-1))
+    if (((word)link & (ALIGNMENT-1)) || link == NULL)
     	ABORT("Bad arg to GC_general_register_disappearing_link");
 #   ifdef THREADS
     	LOCK();
@@ -244,7 +244,7 @@ out:
 
 /* Possible finalization_marker procedures.  Note that mark stack	*/
 /* overflow is handled by the caller, and is not a disaster.		*/
-GC_API void GC_normal_finalize_mark_proc(ptr_t p)
+STATIC void GC_normal_finalize_mark_proc(ptr_t p)
 {
     hdr * hhdr = HDR(p);
     
@@ -255,7 +255,7 @@ GC_API void GC_normal_finalize_mark_proc(ptr_t p)
 /* This only pays very partial attention to the mark descriptor.	*/
 /* It does the right thing for normal and atomic objects, and treats	*/
 /* most others as normal.						*/
-GC_API void GC_ignore_self_finalize_mark_proc(ptr_t p)
+STATIC void GC_ignore_self_finalize_mark_proc(ptr_t p)
 {
     hdr * hhdr = HDR(p);
     word descr = hhdr -> hb_descr;
@@ -277,7 +277,7 @@ GC_API void GC_ignore_self_finalize_mark_proc(ptr_t p)
 }
 
 /*ARGSUSED*/
-GC_API void GC_null_finalize_mark_proc(ptr_t p)
+STATIC void GC_null_finalize_mark_proc(ptr_t p)
 {
 }
 
@@ -289,7 +289,7 @@ GC_API void GC_null_finalize_mark_proc(ptr_t p)
 /* behavior.  Objects registered in this way are not finalized		*/
 /* if they are reachable by other finalizable objects, eve if those	*/
 /* other objects specify no ordering.					*/
-GC_API void GC_unreachable_finalize_mark_proc(ptr_t p)
+STATIC void GC_unreachable_finalize_mark_proc(ptr_t p)
 {
     GC_normal_finalize_mark_proc(p);
 }
@@ -304,7 +304,7 @@ GC_API void GC_unreachable_finalize_mark_proc(ptr_t p)
 /* marking for finalization ordering.  Any objects marked	*/
 /* by that procedure will be guaranteed to not have been	*/
 /* finalized when this finalizer is invoked.			*/
-GC_API void GC_register_finalizer_inner(void * obj,
+STATIC void GC_register_finalizer_inner(void * obj,
 					GC_finalization_proc fn, void *cd,
 					GC_finalization_proc *ofn, void **ocd,
 					finalization_mark_proc mp)
